[package]
name = "sensor-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
structopt = "0.3"
influxdb-client = "0.1.4"

#[dependencies.influxdb-client]
#path = "/home/jsvana/projects/influxdb-client-rs/influxdb-client"

[dependencies.tokio]
features = ["macros", "rt"]
version = "1.13"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.paho-mqtt]
version = "0.9"
